# pixelpop

./: .gitignore  .gitlab-ci.yml  README.md  load_standard_set.sh  pyproject.toml  setup.py
examples/: Debug.ipynb  Exploring_functions.ipynb  mass1_redshift.py  masses.py
examples/data/: injection_set_chieff.pkl
gwpop_nearest_neighbor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gwpop_nearest_neighbor/models/: gwpop_models.py
gwpop_nearest_neighbor/utils/: event_utils.py  nearest_neighbor.py
pixelpop/: __init__.py
pixelpop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pixelpop/experimental/: __init__.py  car.py  probabilistic-second.py  probabilistic.py
pixelpop/experimental/debug/: car-claude.py  normalized_not_sigma_marg.py  probabilistic-claude-attempt-1.py
pixelpop/experimental2/: car-attempts-sat.py  car.py  probabilistic-attempts-sat.py  probabilistic.py
pixelpop/experimental2/debug/: probabilistic-claude-attempt-2.py
pixelpop/experimental2/explore/: two-stage.py
pixelpop/models/: __init__.py  car.py  gwpop_models.py  probabilistic.py  probabilistic_no_mixture.py
pixelpop/result/: __init__.py  post_processing.py  save_popsummary.py  validate.py
pixelpop/utils/: __init__.py  data.py  event_utils.py  nearest_neighbor.py
test/models/: gwpop_models_test.py  o4_default_mass_model.py  o4_default_spin_model.py
test/utils/: data_test.py  nearest_neighbor_test.py
